[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Level_Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Test_Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/batmfa__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main_menu_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Level_button_font.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_char = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
extra_spacing_char = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_char = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
extra_spacing_char = 3
font_data = ExtResource( 3 )

[node name="Level_Menu" type="CanvasLayer"]
script = ExtResource( 1 )
Level_1 = ExtResource( 2 )

[node name="Background Image" type="Sprite" parent="."]

[node name="The" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = 41.0
margin_right = 88.0
margin_bottom = -465.0
custom_fonts/font = SubResource( 1 )
text = "the"
align = 1

[node name="Enemy" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -177.0
margin_top = 62.0
margin_right = 178.0
margin_bottom = -408.0
custom_fonts/font = SubResource( 2 )
text = "Enemy"
align = 1

[node name="is" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = 132.0
margin_right = 31.0
margin_bottom = -368.0
custom_fonts/font = SubResource( 3 )
text = "is"
align = 1

[node name="You" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = 170.0
margin_right = 98.0
margin_bottom = -305.0
custom_fonts/font = ExtResource( 4 )
text = "You"
align = 1

[node name="Level_1_Button" type="Button" parent="."]
margin_left = 105.0
margin_top = 260.0
margin_right = 255.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 5 )
text = "Level 1"

[node name="Level_2_Button" type="Button" parent="."]
margin_left = 305.0
margin_top = 260.0
margin_right = 455.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 5 )
text = "Level 2"

[node name="Level_3_Button" type="Button" parent="."]
margin_left = 505.0
margin_top = 260.0
margin_right = 655.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 5 )
text = "Level 3"

[node name="Level_4_Button" type="Button" parent="."]
margin_left = 705.0
margin_top = 260.0
margin_right = 855.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 5 )
text = "Level 4"

[node name="Level_5_Button" type="Button" parent="."]
margin_left = 104.05
margin_top = 360.95
margin_right = 254.05
margin_bottom = 430.95
custom_fonts/font = ExtResource( 5 )
text = "Level 5"

[node name="Level_6_Button" type="Button" parent="."]
margin_left = 304.05
margin_top = 360.0
margin_right = 454.05
margin_bottom = 430.0
custom_fonts/font = ExtResource( 5 )
text = "Level 6"

[node name="Level_7_Button" type="Button" parent="."]
margin_left = 505.0
margin_top = 360.0
margin_right = 655.0
margin_bottom = 430.0
custom_fonts/font = ExtResource( 5 )
text = "Level 7"

[node name="Level_8_Button" type="Button" parent="."]
margin_left = 705.95
margin_top = 359.05
margin_right = 855.95
margin_bottom = 429.05
custom_fonts/font = ExtResource( 5 )
text = "Level 8"

[node name="Back" type="Button" parent="."]
margin_left = 27.0
margin_top = 26.0
margin_right = 148.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "Back"
[connection signal="pressed" from="Level_1_Button" to="." method="_on_Level_1_Button_pressed"]
[connection signal="pressed" from="Level_2_Button" to="." method="_on_Level_2_Button_pressed"]
[connection signal="pressed" from="Level_3_Button" to="." method="_on_Level_3_Button_pressed"]
[connection signal="pressed" from="Level_4_Button" to="." method="_on_Level_4_Button_pressed"]
[connection signal="pressed" from="Level_5_Button" to="." method="_on_Level_5_Button_pressed"]
[connection signal="pressed" from="Level_6_Button" to="." method="_on_Level_6_Button_pressed"]
[connection signal="pressed" from="Level_7_Button" to="." method="_on_Level_7_Button_pressed"]
[connection signal="pressed" from="Level_8_Button" to="." method="_on_Level_8_Button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
